[package]
name = "mc_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
inputbot = "0.6.0"
rand = "0.8.5"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "time"] }
tui-big-text = "0.4.2"
